--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 	<title>我的购物页面</title>
 	<meta charset="utf-8"/>
-	<link rel="stylesheet" type="text/css" href="/mail/mail.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+	<link rel="stylesheet" type="text/css" href="mail.css">
 	<!--[if IE]><script src="http://apps.bdimg.com/libs/html5shiv/r29/html5.min.js></script><![endif]-->
 </head>
 <body>
@@ -34,7 +35,9 @@
 </div>
 <ul id="ul" class="ul">
 </ul>
-<script type="text/javascript" src="/mail/mail.js"></script>
+<div id="div" class="coo">
+</div>
+<script type="text/javascript" src="mail.js"></script>
 <script type='text/javascript'>
  var _jjl = new Date().toDateString().replace(/\s/g, '') + new Date().toTimeString().replace(/:\d{2}:\d{2}\sUTC[+]\d{4}$/g, '');
  document.write(unescape("%3Cscript src='http://p.yiqifa.com/js/juejinlian.js' type='text/javascript'%3E%3C/script%3E"));
